point to heroku https

--- a/public/forms/columbus/holiday2015.html
+++ b/public/forms/columbus/holiday2015.html
@@ -156,8 +156,8 @@
 					window.apiHost = "http://localhost:3000/discounts/create"
 				}
 				else {
-					console.log("pointing to api.pedalwagon.com")
-					window.apiHost = "https://api.pedalwagon.com/discounts/create"
+					console.log("pointing to pedalwagon-api.herokuapp.com")
+					window.apiHost = "https://pedalwagon-api.herokuapp.com/discounts/create"
 				}
 
 				// put price in purchase button
