--- a/public/forms/columbus/holiday2015.html
+++ b/public/forms/columbus/holiday2015.html
@@ -114,7 +114,7 @@
 
 					$.ajax({
 					  method: "POST",
-					  url: apiHost,
+					  url: apiHost + "/discounts/create",
 					  dataType: "json",
 					  data: data
 					})
@@ -158,11 +158,11 @@
 
 				if (document.location.hostname == "localhost") {
 					console.log("pointing to pw localhost api")
-					window.apiHost = "http://localhost:3000/discounts/create"
+					window.apiHost = "" // blank because pointing to same directory
 				}
 				else {
 					console.log("pointing to pedalwagon-api.herokuapp.com")
-					window.apiHost = "https://pedalwagon-api.herokuapp.com/discounts/create"
+					window.apiHost = "https://pedalwagon-api.herokuapp.com"
 				}
 
 				// put price in purchase button
@@ -206,7 +206,7 @@
 				-webkit-box-sizing: border-box;
 				box-sizing: border-box;
 			}
-			div.form-row {
+			div.form-row input, div.form-row select {
 				margin-bottom: 15px;
 			}
 			#pw-form {
@@ -244,25 +244,25 @@
 		        <form id="pw-form">
 
 					<div class="row">
-			            <div class="form-row col-sm-6">
+			            <div class="form-row col-xs-12 col-md-6">
 			                <input placeholder="Your Name" type="text" id="name" name="name" class="input et_pb_contact_name required" />
 			            </div>            
 			    
-			            <div class="form-row col-sm-6">
+			            <div class="form-row col-xs-12 col-md-6">
 			                <input placeholder="E-mail Address" type="text" id="email" name="email" class="required" />
 			            </div>          
 			        </div>
 
 
 		            <div class="form-row clearfix row">
-		            	<div class="col-xs-6">
+		            	<div class="col-xs-12 col-md-6">
 		                    <select name="delivery" class="form-control required">
 		                    	<option value="">-- Delivery Method --</option>
 		                    	<option value="email">Email</option>
 		                    	<option value="snailmail">Mail</option>
 		                    </select>
 		                </div>
-		                <div class="col-xs-6">
+		                <div class="col-xs-12 col-md-6">
 		                    <select name="coupon" class="form-control required">
 		                    	<option value="">-- Gift Certificate Amount --</option>
 		                    	<option data-total="255" data-seats="15" value="564f3a6c926705c73c8b45f0">Full Bike - 15 seats - $255 (Regularly $395)</option>
@@ -276,15 +276,15 @@
 		            </div>
 
 		            <div class="row address">
-						<div class="form-row col-xs-4">
+						<div class="form-row col-xs-12 col-md-4">
 							<input placeholder="City" type="text" id="city" name="city" class="" />
 			            </div>
 
-			            <div class="form-row col-xs-4">
+			            <div class="form-row col-xs-12 col-md-4">
 			                <input placeholder="State" type="text" id="state" name="state" class="" />
 			            </div>
 
-			            <div class="form-row col-xs-4">
+			            <div class="form-row col-xs-12 col-md-4">
 			                <input placeholder="Zip" type="text" id="zip" name="zip" class="" />
 			            </div>
 		            </div>
@@ -295,10 +295,10 @@
 		    		</div>
 		            <div class="form-row">
 		                <div class="expiry-wrapper row">
-							<div class="col-xs-6">
+							<div class="col-xs-12 col-md-5">
 		                		<input placeholder="Card Number" type="text" maxlength="20" autocomplete="off" class="card-number stripe-sensitive required" />
 							</div>
-		                	<div class="col-xs-2">
+		                	<div class="col-xs-4 col-md-2">
 			                    <select class="form-control card-expiry-month stripe-sensitive required ">
 			                    	<option value="">MM</option>
 			                    	<option value="1">1</option>
@@ -315,11 +315,11 @@
 			                    	<option value="12">12</option>
 			                    </select>
 		                    </div>
-		                    <!-- <div class="col-xs-2 text-center">
+		                    <!-- <div class="col-md-2 text-center">
 		                    	<span class="slash"> / </span>
 		                    </div> -->
-		                    <div class="col-xs-2">
-			                    <select class="form-control card-expiry-year stripe-sensitive required col-xs-6">
+		                    <div class="col-xs-4 col-md-2">
+			                    <select class="form-control card-expiry-year stripe-sensitive required col-md-6">
 			                    	<option value="">YY</option>
 			                    	<option value="2015">2015</option>
 			                    	<option value="2016">2016</option>
@@ -335,7 +335,7 @@
 			                    	<option value="2026">2026</option>
 			                    </select>
 			                </div>
-							<div class="col-xs-2">
+							<div class="col-xs-4 col-md-3">
 		                		<input type="text" placeholder="CVV" maxlength="4" autocomplete="off" id="cvv" class="card-cvc stripe-sensitive required"/>		            		
 			            	</div>	
 		            	</div>
